fix(css): atoms-select-dropdown fixing sticky position overflow sizing

--- a/htwoo-core/src/styles/01-atoms/input/_select.scss
+++ b/htwoo-core/src/styles/01-atoms/input/_select.scss
@@ -147,4 +147,5 @@
 	align-items: center;
     position: sticky;
     top: 0;
+    padding-bottom: 0.25rem;
 }
